--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153482036-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-153482036-1"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'UA-153482036-1');
+      gtag("config", "UA-153482036-1");
     </script>
 
     <meta charset="utf-8" />
@@ -39,8 +44,9 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Signika:300,400"
+      href="//db.onlinewebfonts.com/c/38d41072aa88a50711d4d50dd0d50f6b?family=Neue+Machina"
       rel="stylesheet"
+      type="text/css"
     />
     <link rel="icon" href="favicon.png?" type="image/x-icon" />
     <title>Carolina Li</title>
