--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     </script>
 
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="favicon.png?" />
+    <!-- <link rel="shortcut icon" href="favicon.png?" /> -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -43,6 +43,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐯</text></svg>">
     <link
       href="//db.onlinewebfonts.com/c/38d41072aa88a50711d4d50dd0d50f6b?family=Neue+Machina"
       rel="stylesheet"
